--- a/plugin/webContent/input/input.html
+++ b/plugin/webContent/input/input.html
@@ -79,10 +79,11 @@
     </style>
 
     <!--<div id="aaa" style="height: 100%; width: 400px; border: 1px solid #000;position: relative;">-->
+        <h5 class="proprty">属性设置</h5>
         <div class="ensure">
             <span class="ensure_load loadParguet">上传源数据</span>
-            <!--<span class="ensure_load saveActionComp">保存</span>-->
-            <!--<span class="ensure_load generateSql">生成SQL</span>-->
+            <span class="ensure_load saveActionComp">保存</span>
+            <span class="ensure_load generateSql">生成SQL</span>
 
         </div>
         <div class="fromInp" style="margin-top: 44px;">
