--- a/plugin/webContent/output/output.html
+++ b/plugin/webContent/output/output.html
@@ -110,8 +110,8 @@
 
     <div class="ensure">
         <span class="ensure_load">另存为模板</span>
-        <!--<span class="ensure_load saveActionComp">保存</span>-->
-        <!--<span class="ensure_load generateSql">生成SQL</span>-->
+        <span class="ensure_load saveActionComp">保存</span>
+        <span class="ensure_load generateSql">生成SQL</span>
 
     </div>
     <div class="fromInp" style="margin-top: 44px;">
