--- a/html/flowChart.html
+++ b/html/flowChart.html
@@ -45,7 +45,7 @@
       var this_versionId = localStorage.getItem("versionId");
       var this_webComponentId;
       var this_actionCompType;
-      var $url = 'xdbd-etl'; ///xdbd-etl
+      var $url = '../xdbd-etl'; ///xdbd-etl
 
       init_dataSourceTables();
       init_actionComp();
