修改头部样式

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 					<div class="ban-main">
 						<img src="images/ban.png" alt="" />
 						<div class="user-box">
-							<div class="msg-unread">
+							<!--<div class="msg-unread">
 								<img src="images/bell.png" alt="" />
 								<span class="unread-msg">1</span>
-							</div>
+							</div>-->
 							<div class="user-info">
 								<img src="images/dog.png" alt="" class="headimg"/>
 								<img src="images/down.png" alt="" class="rdown"/>
