--- a/html/etlChart.html
+++ b/html/etlChart.html
@@ -27,6 +27,7 @@
         .hide{display: none;}
     </style>
     <script type="text/javascript" src="../plugin/gooflow/jquery.min.js"></script>
+     <script src="../js/login.js"></script>
     <script type="text/javascript" src="../plugin/gooflow/child.js"></script>
     <script type="text/javascript" src="../plugin/gooflow/GooFunc.js"></script>
     <!--<script type="text/javascript" src="../plugin/gooflow/json2.js"></script>-->
