--- a/html/etlStencil.html
+++ b/html/etlStencil.html
@@ -55,6 +55,7 @@
 </div>
 
 <script src="../plugin/jQuery/jquery.min.js"></script>
+ <script src="../js/login.js"></script>
 <script src="../plugin/layer/layer.js"></script>
 <script src="../js/etlStencil.js"></script>
 </body>
