--- a/html/menuSet.html
+++ b/html/menuSet.html
@@ -293,6 +293,7 @@
 			<ul id="modal-tree" class="ztree"></ul>
 		</div>
     <script src="../plugin/jQuery/jquery.min.js"></script>
+    <script src="../js/login.js"></script>
     <script src="../plugin/zTree/jquery.ztree.all.min.js"></script>
     <!--<script src="//code.jquery.com/ui/1.10.4/jquery-ui.js"></script>-->
     <script src="../plugin/swiper/swiper.min.js"></script>
