--- a/html/pageFlow.html
+++ b/html/pageFlow.html
@@ -130,6 +130,7 @@
 			<ul id="other-tree" class="ztree"></ul>
 		</div>
     <script src="../plugin/jQuery/jquery.min.js"></script>
+    <script src="../js/login.js"></script>
     <script src="../plugin/zTree/jquery.ztree.all.min.js"></script>
     <script src="../plugin/layer/layer.js"></script>
 		<script src="../plugin/d3/d3.v3.min.js"></script>
