--- a/editBI.html
+++ b/editBI.html
@@ -742,6 +742,7 @@
 	<div class="hint"></div>
 	
     <script src="plugin/jQuery/jquery.min.js"></script>
+     <script src="js/login.js"></script>
     <script src="plugin/jQuery/jQuery_ui.js"></script>
 	<script src="plugin/d3/d3.v3.min.js"></script>
 	<script  src="plugin/d3/d3.tip.js"></script>
