--- a/html/loglist.html
+++ b/html/loglist.html
@@ -107,6 +107,7 @@
     	</div>
     </div>
     <script src="../plugin/jQuery/jquery.min.js"></script>
+    <script src="../js/login.js"></script>
     <script src="../plugin/layui-v2.1.3/layui/layui.js"></script>
     <script src="../plugin/jQuery/jQuery_ui.js"></script>
     <script src="../js/loglist.js"></script>
