--- a/html/modifypsw.html
+++ b/html/modifypsw.html
@@ -87,6 +87,7 @@
     	</div>
     </section>
     <script src="../plugin/jQuery/jquery.min.js"></script>
+    <!--<script src="../js/login.js"></script>-->
     <script src="../plugin/validate/jquery.validate.min.js"></script>
     <script src="../plugin/validate/messages_zh.min.js"></script>
     <script src="../js/form.js"></script>
