--- a/html/msgcenter.html
+++ b/html/msgcenter.html
@@ -205,6 +205,7 @@
     	</div>
     </div>
     <script src="../plugin/jQuery/jquery.min.js"></script>
+    <script src="../js/login.js"></script>
     <script src="../plugin/layui-v2.1.3/layui/layui.js"></script>
     <script src="../js/pagination.js"></script>
   </body>
