--- a/html/origin.html
+++ b/html/origin.html
@@ -76,6 +76,7 @@
 </div>
 
 <script src="../plugin/jQuery/jquery.min.js"></script>
+<script src="../js/login.js"></script>
 <script src="../plugin/layer/layer.js"></script>
 <script src="../js/origin.js"></script>
 </body>
