--- a/plugin/webContent/output/output.html
+++ b/plugin/webContent/output/output.html
@@ -123,7 +123,7 @@
         <thead>
             <tr>
                 <th>列名</th>
-                <th>别名</th>
+                <th>显示名称</th>
             </tr>
         </thead>
         <tbody class="extractFields">
