--- a/plugin/webContent/where/where.html
+++ b/plugin/webContent/where/where.html
@@ -164,7 +164,7 @@
                         <option>></option>
                         <option><=</option>
                         <option>>=</option>
-                        <option>>like</option>
+                        <option>like</option>
                     </select>
                 </td>
                 <td><input class="value" type="text" /></td>
