--- a/html/etlChart.html
+++ b/html/etlChart.html
@@ -46,7 +46,7 @@
       var template = sessionStorage.getItem("isTemplate");
       var JobId = sessionStorage.getItem("jobId");
       var this_isTemplate = false;  //是否为模板
-      var $url = '';  ///xdbd-wf
+      var $url = '../xdbd-wf';  ///xdbd-wf
 
       if(template){
         this_isTemplate = true;
