--- a/html/etlChart.html
+++ b/html/etlChart.html
@@ -678,8 +678,8 @@
         //有限无环图
       function init_dag() {
         var demandId = {
-          id: jobid,
-          versionId: this_versionId
+          "id": jobid,
+          "versionId": this_versionId
         }
         $.ajax({
           type:"POST",
