完成堆叠柱状图

--- a/editBI.html
+++ b/editBI.html
@@ -111,28 +111,70 @@
 											</div>
 											<div class="chart-type-lists">
 												<ul>
-													<li class="active">
+													<li data-type="101" class="active">
 														<div>
 															<img src="images/icon_bar_on.png" alt="" class="fl"/>
 															<span>柱状图</span>
 														</div>
 													</li>
-													<li>
+													<li data-type="102">
 														<div>
 															<img src="images/icon_pie_on.png" alt="" class="fl" />
 															<span>饼图</span>
 														</div>
 													</li>
-													<li>
+													<li data-type="103">
 														<div>
 															<img src="images/icon_line_on.png" alt="" class="fl" />
 															<span>折线图</span>
 														</div>
 													</li>
-													<li>
+													<li data-type="0">
 														<div>
 															<img src="images/icon_table_on.png" alt="" class="fl" />
 															<span>表格</span>
+														</div>
+													</li>
+													<li data-type="104">
+														<div>
+															<img src="images/icon_bar_on.png" alt="" class="fl" />
+															<span>堆叠柱状图</span>
+														</div>
+													</li>
+													<li data-type="105">
+														<div>
+															<img src="images/icon_bar_on.png" alt="" class="fl" />
+															<span>区域图</span>
+														</div>
+													</li>
+													<li data-type="106">
+														<div>
+															<img src="images/icon_bar_on.png" alt="" class="fl" />
+															<span>散点图</span>
+														</div>
+													</li>
+													<li data-type="107">
+														<div>
+															<img src="images/icon_bar_on.png" alt="" class="fl" />
+															<span>甘特图</span>
+														</div>
+													</li>
+													<li data-type="108">
+														<div>
+															<img src="images/icon_bar_on.png" alt="" class="fl" />
+															<span>仪表盘</span>
+														</div>
+													</li>
+													<li data-type="109">
+														<div>
+															<img src="images/icon_bar_on.png" alt="" class="fl" />
+															<span>漏斗图</span>
+														</div>
+													</li>
+													<li data-type="110">
+														<div>
+															<img src="images/icon_bar_on.png" alt="" class="fl" />
+															<span>矩阵图<span>
 														</div>
 													</li>
 												</ul>
