修改一些bug及菜单设置接口对接

--- a/html/biTemplet.html
+++ b/html/biTemplet.html
@@ -12,18 +12,18 @@
         <div class="form_validator">
             <label>模板类型：</label>
             <select>
-                <option value="0">平台</option>
-                <option value="1">企业</option>
+                <option value="平台">平台</option>
+                <option value="企业">企业</option>
             </select>
         </div>
         <div class="form_validator">
             <label>行业：</label>
             <select>
-                <option value="0">全部</option>
-                <option value="1">房地产</option>
-                <option value="2">酒店</option>
-                <option value="3">互联网</option>
-                <option value="4">自定义</option>
+                <option value="全部">全部</option>
+                <option value="房地产">房地产</option>
+                <option value="酒店">酒店</option>
+                <option value="互联网">互联网</option>
+                <option value="自定义">自定义</option>
             </select>
         </div>
         <!--<div class="form_validator">
@@ -47,7 +47,7 @@
     </div>
     <div class="demand_main" id="demand_list">
         <!--<dl class="new_demand">
-            <dt><img src="../images/wendang_moren.png"></dt>
+            <dt><img src="../images/bi_moren.png"></dt>
             <dd>
                 <p>dsfdsfds</p>
                 <span>dfsdfsd</span>
