--- a/plugin/webContent/input/input.html
+++ b/plugin/webContent/input/input.html
@@ -76,6 +76,16 @@
         .regulation .lessen{
             background: url(../../../images/shanchu.png) no-repeat center;
         }
+        .archive{
+            position: relative;
+        }
+        .archive .fields_inp{
+            position: absolute;
+            left: 2px;
+            top: 0;
+            width: 136px;
+            height: 24px;
+        }
     </style>
 
     <!--<div id="aaa" style="height: 100%; width: 400px; border: 1px solid #000;position: relative;">-->
@@ -111,8 +121,8 @@
             <div class="extractFields" style="float: left;">
 
                 <div class="archive extractField">
-                    <input class="fields" style="width:160px;height: 28px;margin-left: 12px;"/>
-
+                    <select class="fields" style="width:160px;height: 28px;margin-left: 12px;"/></select>
+                    <!--<input type="text" class="fields_inp" id="input"/>-->
                     <div class="regulation">
                         <span class="add"></span>
                         <span class="lessen"></span>
