--- a/html/etlChart.html
+++ b/html/etlChart.html
@@ -302,7 +302,8 @@
               console.log(data)
               if(data.code == 0) {
                   layer.msg('保存成功！');
-//                  window.location.href = 'stencilmanage.html';
+              } else {
+                layer.msg(data.message)
               }
             },error:function(data){
               layer.msg(JSON.stringify(data))
