--- a/html/flowChart.html
+++ b/html/flowChart.html
@@ -23,6 +23,11 @@
         .myForm .form_btn_div{text-align:center;border-top:#ccc 1px solid;background:#f5f5f5;padding:4px;border-radius:0px 0px 3px 3px;}
         #propertyForm{overflow: hidden}
         .hide{display: none;}
+        .list{  font-size: 14px;  color: #3D5275;  }
+        .list thead{  background: #e2e2e2;color: #2f3238;  }
+        .list thead tr.list_head{height: 36px;line-height: 36px;color: #666;}
+        .list tbody tr td{  border: 1px solid #ccc;  padding: 3px;}
+        .padlock{width: 90px;height: 30px;margin: 10px auto;background: #578FE6;color: #fff;line-height: 30px;text-align: center;border-radius: 5px;cursor: pointer;font-size: 14px;}
     </style>
     <script type="text/javascript" src="../plugin/gooflow/jquery.min.js"></script>
     <script src="../js/login.js"></script>
@@ -60,7 +65,7 @@
         haveHead:true,
 //        headLabel:true,
         initLabelText:'流程图',
-        headBtns:["new","undo","redo","reload","print","save","sql","preview","saveCopy"],//如果haveHead=true，则定义HEAD区的按钮  "save",
+        headBtns:["save","undo","redo","reload","new","print","preview","saveCopy"],//如果haveHead=true，则定义HEAD区的按钮  "save",
         haveTool:true,
         haveDashed:true,
         haveGroup:true,
@@ -102,7 +107,7 @@
               data:JSON.stringify(delActionComp),
               success:function(data){
                 if(data.code == 0) {
-                  console.log('删除成功')
+                  layer.msg('删除成功')
                 }
               },error:function(data){
                 layer.msg(JSON.stringify(data))
@@ -203,11 +208,30 @@
               "versionId": this_versionId
             }),
             success:function(data){
-              var data = data.data;
-              console.log(data);
-//              $.each(data,function(){
-//                tables[this.tableName] = this;
-//              });
+              console.log(data)
+              if(data.code == 0) {
+                var head = data.data.head;
+                var data = data.data.data;
+                var previewData = [];
+                var previewHead = [];
+
+                $.each(head,function(index,item) {
+                  previewHead.push('<th>'+item+'</th>');
+                })
+
+                $.each(data,function(index_tr,tr) {
+                      var aaa = '';
+                      $.each(head,function(index_hd,th) {
+                        //alert(tr[th])
+                        aaa = aaa+'<td>'+tr[th]+'</td>';
+                      });
+                      previewData.push('<tr>'+aaa+'</tr>')
+                })
+
+                fn_preview(previewHead,previewData);
+              } else {
+                layer.msg(data.message)
+              }
             }
           });
         };
@@ -280,9 +304,31 @@
       function trigger_click_comp(id){
         $('#'+id).trigger('click');
       }
-
-
-
+      var prop;
+      //预览弹出层
+      function fn_preview(previewHead,previewData) {
+        prop = layer.open({
+          type: 1,
+          title: '预览',
+          area: ['1005px', '600px'], //宽高
+          closeBtn: 1,
+          shadeClose: true,
+          content: '<table class="list" cellspacing="0" cellpadding="5">' +
+          '<thead>' +
+          '<tr class="list_head"></tr>' +
+          '</thead>' +
+          '<tbody class="list_body">' +
+          '</tbody>' +
+          '</table>' +
+          '<div class="padlock" onclick="padlockBtn(prop)">关闭</div>'
+        });
+        $(".list_head").html(previewHead);
+        $(".list_body").html(previewData);
+      }
+      //关闭
+      function padlockBtn(prop) {
+        layer.close(prop);
+      }
       //根据webComponentId获取actionComp
       function fn_get_actionComp_by_webComponentId(webComponentId){
         var actionComp;
@@ -425,7 +471,10 @@
           data:JSON.stringify(val),
           success:function(data){
             if(data.success){
+              layer.msg('保存成功')
               init_actionComp();
+            } else {
+              layer.msg(data.message)
             }
             //alert(data.message);
           }
@@ -527,8 +576,6 @@
             }
           });
         }
-
-
 
     </script>
 </head>
