--- a/html/preview.html
+++ b/html/preview.html
@@ -38,7 +38,7 @@
                         <ul id="sidebar-tree" class="ztree"></ul>
                     </div>
                     <div class="mn-htmlmain">
-                        主体区域
+                        <!--主体区域-->
                     </div>
                 </div>
                 <div class="m-html-mod1">
@@ -54,10 +54,10 @@
                         </ul>
                     </div>
                     <div class="mn-sider">
-                        菜单
+                        <!--菜单-->
                     </div>
                     <div class="mn-htmlmain">
-                        主体区域
+                        <!--主体区域-->
                     </div>
                 </div>
                 <div class="m-html-mod2">
@@ -73,10 +73,10 @@
                         </ul>
                     </div>
                     <div class="mn-sider">
-                        菜单
+                        <!--菜单-->
                     </div>
                     <div class="mn-htmlmain">
-                        主体区域
+                        <!--主体区域-->
                     </div>
                 </div>
 
@@ -92,10 +92,10 @@
 <script src="../plugin/jQuery/jQuery_ui.js"></script>
 <script src="../plugin/zTree/jquery.ztree.all.min.js"></script>
 <script src="../plugin/d3/d3.v3.min.js"></script>
-<script  src="../plugin/d3/d3.tip.js"></script>
 <!--存放3D转化封装的函数-->
+<script src="../js/login.js"></script>
+<script src="../js/preview.js"></script>
 <script src="../js/graphical.js"></script>
 <script src="../js/menu.js"></script>
-<script src="../js/preview.js"></script>
 </body>
 </html>
